force-app/main/default/objects/WhatsApp_Conversation__c/WhatsApp_Conversation__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Conversation</label>
    <nameField>
        <displayFormat>CONV-{0000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>