force-app/main/default/objects/WhatsApp_Conversation__c/fields/Agentforce_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Agent_Id__c</fullName>
    <description>The Agentforce Agent ID that owns the current session. Used to detect when the configured agent changes and invalidate stale sessions.</description>
    <label>Agentforce Agent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>