force-app/main/default/objects/WhatsApp_Conversation__c/fields/Agentforce_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Session_Id__c</fullName>
    <description>Agentforce session ID for conversation continuity</description>
    <label>Agentforce Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>