force-app/main/default/objects/WhatsApp_Conversation__c/fields/Agentforce_Topic__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Topic__c</fullName>
    <description>Current Agentforce topic being handled</description>
    <label>Agentforce Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>