force-app/main/default/objects/WhatsApp_Conversation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Salesforce Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>WhatsApp_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>