force-app/main/default/objects/WhatsApp_Conversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Salesforce Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>WhatsApp_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>