force-app/main/default/objects/WhatsApp_Conversation__c/fields/Conversation_Origin__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Origin__c</fullName>
    <description>How the conversation was started</description>
    <label>Conversation Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Customer_Initiated</fullName><default>false</default><label>Customer Initiated</label></value>
            <value><fullName>Business_Initiated</fullName><default>false</default><label>Business Initiated</label></value>
            <value><fullName>Referral_Ad</fullName><default>false</default><label>Referral Ad</label></value>
            <value><fullName>Click_To_WhatsApp</fullName><default>false</default><label>Click To WhatsApp</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>