force-app/main/default/objects/WhatsApp_Conversation__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>WhatsApp profile name of the customer</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>