force-app/main/default/objects/WhatsApp_Conversation__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Customer WhatsApp Phone Number</description>
    <externalId>true</externalId>
    <label>Customer Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>