force-app/main/default/objects/WhatsApp_Conversation__c/fields/Escalated_To_User__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned when conversation is escalated from Agentforce</description>
    <label>Escalated To User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>WhatsApp_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>