force-app/main/default/objects/WhatsApp_Conversation__c/fields/Last_Message_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Time__c</fullName>
    <description>Timestamp of last message in conversation</description>
    <label>Last Message Time</label>
    <type>DateTime</type>
</CustomField>