force-app/main/default/objects/WhatsApp_Conversation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Salesforce Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WhatsApp Conversations</relationshipLabel>
    <relationshipName>WhatsApp_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>