force-app/main/default/objects/WhatsApp_Conversation__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of messages in conversation</description>
    <label>Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>