force-app/main/default/objects/WhatsApp_Conversation__c/fields/Session_Expiry_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Expiry_Time__c</fullName>
    <description>When the 24-hour messaging window expires</description>
    <label>Session Expiry Time</label>
    <type>DateTime</type>
</CustomField>