force-app/main/default/objects/WhatsApp_Conversation__c/fields/Session_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Time__c</fullName>
    <description>When the 24-hour messaging window started</description>
    <label>Session Start Time</label>
    <type>DateTime</type>
</CustomField>