force-app/main/default/objects/WhatsApp_Conversation__c/fields/Unread_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of unread inbound messages</description>
    <label>Unread Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>